Updated fonts and hyperlinks to match guidelines

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/all.css" rel="stylesheet" type="text/css">
-    <link href='fonts/SpaceGrotesk.woff2' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
@@ -55,7 +53,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="js-scroll-trigger mt-1" href="#page-top"><img height="30px" src="img/logo_nav.png" alt="" title="" /></img></a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Meny
           <i class="fa fa-bars"></i>
         </button>
@@ -138,13 +137,20 @@
         <div class="row">
           <div class="col-lg-12 text-center mt-4">
             <h2 class="section-heading text-uppercase">Hvorfor Mikrodosere</h2>
-            <h3 class="section-subheading text-muted">Årsaker til å mikrodosere</h3>
-            <div class="text-muted mb-4 text-left">
+            <h3 class="section-subheading">Årsaker til å mikrodosere</h3>
+            <div class="mb-4 text-left">
               <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering
-                av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester. (kilde:
-                <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley">Wired</a>.) Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere
+                av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester.<sup>[1]</sup>
+                Mange som mikrodoserer opplever høyere grad av overskudd og energi, og at det gjør trening lettere
                 og mer tilfredsstillende. Andre forteller at mikrodosering hjelper dem med å håndtere depressive symptomer,
-                nikotin og alkoholavhengighet eller angst.</p>
+                nikotin og alkoholavhengighet eller angst.
+              </p>
+               <a target="_blank" href="https://www.wired.co.uk/article/lsd-microdosing-drugs-silicon-valley">
+                 <sup>[1]</sup>
+                 <span class="link__el">Wired.com</span>
+                 <span class="link__postfix">↗</span>
+               </a>
+             </div>
             </div>
           </div>
         </div>
@@ -159,8 +165,8 @@
         <div class="row">
           <div class="col-lg-12 text-center mt-4">
             <h2 class="section-heading text-uppercase">Hvordan Mikrodosere</h2>
-            <h3 class="section-subheading text-muted">Guide til mikrodosering</h3>
-            <div class="text-muted mb-4 text-left">
+            <h3 class="section-subheading">Guide til mikrodosering</h3>
+            <div class="mb-4 text-left">
               <p class="mb-4">
                 Mikrodosering vil si å ta små doser. En mikrodose er 10% eller mindre av en vanlig brukerdose. Det vil si omtrent
                 10µg LSD eller 0,1g tørket psilocybinsopp. Når man mikrodoserer tar man vanligvis en dose to til tre ganger i uken, vanligvis
@@ -201,10 +207,10 @@
         <div class="row">
           <div class="col-lg-12 text-center mt-4">
             <h2 class="section-heading text-uppercase">Sitater</h2>
-            <h3 class="section-subheading text-muted">Hva sier andre om mikrodosering?</h3>
+            <h3 class="section-subheading">Hva sier andre om mikrodosering?</h3>
           </div>
         </div>
-        <div class="row text-muted">
+        <div class="row">
           <div class="card mb-4">
             <div class="card-body">
               <h6 class="card-title">
@@ -275,52 +281,71 @@
         <div class="row">
           <div class="col-lg-12 text-center mt-4">
             <h2 class="section-heading text-uppercase">Forskning</h2>
-            <h3 class="section-subheading text-muted">Hva sier forskningen om mikrodosering?</h3>
-            <div class="text-muted text-left">
+            <h3 class="section-subheading">Hva sier forskningen om mikrodosering?</h3>
+            <div class="text-left">
               <p>Det ikke gjort noen større studier på effektene av mikrodosering ennå, men Dr. James Fadiman har samlet over
-                tusen erfaringsrapporter (kilde:
-                <a target="_blank" href="https://sites.google.com/view/microdosingpsychedelics/">Microdosing Psychedelics</a>). Han gjengir noen av disse i
-                <a href="http://www.psychedelicexplorersguide.com/" target="_blank">The Psychedelic Explorer's Guide:</a> "[...] I've avoided coming to any general conclusions about these low
+                tusen erfaringsrapporter.<sup>[1]</sup>
+                Han gjengir noen av disse i The Psychedelic Explorer's Guide: "[...]
+                I've avoided coming to any general conclusions about these low
                 doses beyond noting that all the reports in my files indicate, as these individuals have, that low-dose use
-                has been positive".</p>
-              <div class="text-muted">
-                <div class="my-3">
-                  <p>
-                    <strong>Vil du bidra til forskningen?</strong>
-                  </p>
-                  <p>
-                    Hvis du ønsker å bidra til mer forskning på effekten av mikrodosering, kan du melde deg på det første placebo-kontrollerte studiet på effekten av mikrodosering ved å følge lenken under.
-                  </p>
-                  <div class="mb-3">
-                    <a target="_blank" href="https://selfblinding-microdose.org">
-                      Info om studiet og påmelding
-                    </a>
-                  </div>
+                has been positive".<sup>[2]</sup>
+              </p>
+              <p>
+                <a target="_blank" href="https://sites.google.com/view/microdosingpsychedelics/">
+                 <sup>[1]</sup>
+                 <span class="link__el">Microdosing Psychedelics</span>
+                 <span class="link__postfix">↗</span>
+               </a>
+             </p>
+              <p>
+                <a target="_blank" href="http://www.psychedelicexplorersguide.com/">
+                  <sup>[2]</sup>
+                  <span class="link__el">The Psychedelic Explorer's Guide</span>
+                  <span class="link__postfix">↗</span>
+                </a>
+              </p>
+              <div class="my-3">
+                <p>
+                  <strong>Vil du bidra til forskningen?</strong>
+                </p>
+                <p>
+                  Hvis du ønsker å bidra til mer forskning på effekten av mikrodosering, kan du melde deg på det første
+                  placebo-kontrollerte studiet på effekten av mikrodosering ved å følge lenken under.
+                </p>
+                <div class="mb-3">
+                  <a target="_blank" href="https://selfblinding-microdose.org">
+                    <span class="link__el">Info om studiet og påmelding</span>
+                    <span class="link__postfix">↗</span>
+                  </a>
                 </div>
-               </div>
-              <div class="text-left text-muted">
+              </div>
+              <div class="text-left">
                 <div class="my-3">
                   <p>
                     <strong>Øvrige lenker til forskning:</strong>
                   </p>
                   <div class="mb-3">
                     <a target="_blank" href="https://www.thelancet.com/journals/lancet/article/PIIS0140-6736(10)61462-6/abstract">
-                      Risiko knyttet til bruk av LSD og psilocybin
+                      <span class="link__el">Risiko knyttet til bruk av LSD og psilocybin</span>
+                      <span class="link__postfix">↗</span>
                     </a>
                   </div>
                   <div class="mb-3">
                     <a target="_blank" href="http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0063972">
-                      Psykedelika og mental helse
+                      <span class="link__el">Psykedelika og mental helse</span>
+                      <span class="link__postfix">↗</span>
                     </a>
                   </div>
                   <div class="mb-3">
                     <a target="_blank" href="https://www.nature.com/articles/nrn2884/">
-                      Mulige effekter på humør og affektive lidelser
+                      <span class="link__el">Mulige effekter på humør og affektive lidelser</span>
+                      <span class="link__postfix">↗</span>
                     </a>
                   </div>
                   <div class="mb-3">
                     <a target="_blank" href="http://www.pnas.org/content/109/6/2138.short/">
-                      Psykedelika og endringer i hjernefunksjon
+                      <span class="link__el">Psykedelika og endringer i hjernefunksjon</span>
+                      <span class="link__postfix">↗</span>
                     </a>
                   </div>
                 </div>
@@ -339,8 +364,8 @@
         <div class="row">
           <div class="col-lg-12 text-center mt-4">
             <h2 class="section-heading text-uppercase">Nytteeffekter</h2>
-            <h3 class="section-subheading text-muted">Potensielle nytteeffekter ved mikrodosering</h3>
-            <div class="text-muted my-4 text-left mb-5">
+            <h3 class="section-subheading">Potensielle nytteeffekter ved mikrodosering</h3>
+            <div class="my-4 text-left mb-5">
               <h5 class="my-3">Forbedret funksjonsevne</h5>
               <p>Mange mikrodoserer fordi de mener det gjør at de fungerer bedre, både på jobb, trening og sosialt. Det kan være
                 lettere å komme inn i såkalte "flow states" med uavbrutt konsentrasjon.</p>
@@ -349,28 +374,28 @@
             <div class="row text-left text-primary">
               <div class="col-xl-6">
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-positive">
+                  <span class="fa-stack fa-1x sr-list-positive">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-lightbulb fa-stack-1x fa-inverse"></i>
                   </span>
                   Økt kreativitet
                 </div>
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-positive">
+                  <span class="fa-stack fa-1x sr-list-positive">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-child fa-stack-1x fa-inverse"></i>
                   </span>
                   Mer energi
                 </div>
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-positive">
+                  <span class="fa-stack fa-1x sr-list-positive">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-briefcase fa-stack-1x fa-inverse"></i>
                   </span>
                   Bedre lederskapsevner
                 </div>
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-positive">
+                  <span class="fa-stack fa-1x sr-list-positive">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-sync fa-stack-1x fa-inverse"></i>
                   </span>
@@ -379,28 +404,28 @@
               </div>
               <div class="col-xl-6">
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-positive">
+                  <span class="fa-stack fa-1x sr-list-positive">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-pencil-alt fa-stack-1x fa-inverse"></i>
                   </span>
                   Økt produktivitet og fokus
                 </div>
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-positive">
+                  <span class="fa-stack fa-1x sr-list-positive">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-comment fa-stack-1x fa-inverse"></i>
                   </span>
                   Bedre sosiale relasjoner
                 </div>
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-positive">
+                  <span class="fa-stack fa-1x sr-list-positive">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-heart fa-stack-1x fa-inverse"></i>
                   </span>
                   Økt empati
                 </div>
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-positive">
+                  <span class="fa-stack fa-1x sr-list-positive">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-volleyball-ball fa-stack-1x fa-inverse"></i>
                   </span>
@@ -410,7 +435,7 @@
             </div>
             <div class="row">
               <div class="col-lg-12">
-                <div class="text-muted my-4 text-left mb-4">
+                <div class="my-4 text-left mb-4">
                   <h5 class="my-3 mt-5">Motvirkning av negative tilstander</h5>
                   <p>Noen som mikrodoserer rapporterer at det gjør det lettere å håndtere eller endrer negative mentale tilstander,
                     inkludert:
@@ -421,21 +446,21 @@
             <div class="row text-left text-primary">
               <div class="col-xl-6">
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-negative">
+                  <span class="fa-stack fa-1x sr-list-negative">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-bed fa-stack-1x fa-inverse"></i>
                   </span>
                   Depresjon
                 </div>
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-negative">
+                  <span class="fa-stack fa-1x sr-list-negative">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-heartbeat fa-stack-1x fa-inverse"></i>
                   </span>
                   PTSD
                 </div>
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-negative">
+                  <span class="fa-stack fa-1x sr-list-negative">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-user-plus fa-stack-1x fa-inverse"></i>
                   </span>
@@ -444,21 +469,21 @@
               </div>
               <div class="col-xl-6">
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-negative">
+                  <span class="fa-stack fa-1x sr-list-negative">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                   </span>
                   Sosial- og generalisert angst
                 </div>
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-negative">
+                  <span class="fa-stack fa-1x sr-list-negative">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-pills fa-stack-1x fa-inverse"></i>
                   </span>
                   Avhengighet
                 </div>
                 <div class="mb-3">
-                  <span class="fa-stack fa-2x sr-list-negative">
+                  <span class="fa-stack fa-1x sr-list-negative">
                     <img class="icon" src="img/simple-circle.svg" alt="">
                     <i class="fa fa-plus fa-stack-1x fa-inverse"></i>
                   </span>
@@ -475,10 +500,10 @@
     <section id="risk" class="bg-white">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center mt-4 text-muted">
+          <div class="col-lg-12 text-center mt-4">
             <h2 class="section-heading text-uppercase">Risiko</h2>
-            <h3 class="section-subheading text-muted">Risiko ved mikrodosering</h3>
-            <div class="text-muted text-left">
+            <h3 class="section-subheading">Risiko ved mikrodosering</h3>
+            <div class="text-left">
               <div class="text-center text-primary">
                 <div class="primarybg rounded px-5 mt-5 pt-4 pb-4 mb-4">
                   <i class="fa fa-exclamation-triangle fa-2x mt-2 mb-2"></i>
@@ -494,7 +519,8 @@
                 par måneder av gangen.
               </p>
               <p class="mb-4">
-                I større doser kan psykedelika lede til følelsesmessig krevende og skremmende opplevelser. Dette er en usannsynlig risiko ved mikrodosering, men det er mulig å merke en forsterkning av negative følelser.
+                I større doser kan psykedelika lede til følelsesmessig krevende og skremmende opplevelser. Dette er en usannsynlig
+                risiko ved mikrodosering, men det er mulig å merke en forsterkning av negative følelser.
                 Vurder din egen mentale tilstand før du velger å mikrodosere. Dersom du lider av alvorlige mentale lidelser,
                 som schizofreni, bør du diskutere med fastlegen før du velger å mikrodosere.
               </p>
@@ -522,7 +548,7 @@
         <div class="row">
           <div class="col-lg-12 text-center mt-4">
             <h2 class="section-heading text-uppercase">Mer informasjon</h2>
-            <h3 class="section-subheading text-muted">Mer informasjon om mikrodosering kan finnes på disse nettsidene</h3>
+            <h3 class="section-subheading">Mer informasjon om mikrodosering kan finnes på disse nettsidene:</h3>
           </div>
         </div>
         <div class="row">
@@ -592,7 +618,7 @@
         <div class="row text-center">
           <div class="col-md-8 mx-auto">
             <img class="mt-5 mb-5" height="50em" src="img/logo_black.svg" alt="">
-            <p class="section-subheading text-muted">
+            <p class="section-subheading">
               Psynapse er et nettverk som jobber for å skape anerkjennelse og forståelse for
               bruk av psykedelika og MDMA, både i rekreasjonelle, seremonielle eller terapeutiske former.
             </p>
@@ -615,7 +641,10 @@
                 </a>
               </div>
             </div>
-            <a target="_blank" href="https://www.psynapse.no/">Besøk oss på psynapse.no</a>
+            <a target="_blank" href="https://www.psynapse.no/">
+              <span class="link__el bottomlink">Besøk oss på psynapse.no</span>
+              <span class="link__postfix">↗</span>
+            </a>
           </div>
         </div>
       </div>
