Changed text alignment and fixed more info links

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
     <section id="why" class="lightbg">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center mt-4">
-            <h2 class="section-heading text-uppercase">Hvorfor Mikrodosere</h2>
-            <h3 class="section-subheading">Årsaker til å mikrodosere</h3>
+          <div class="col-lg-12 mt-4">
+          <h3 class="section-subheading">Hvorfor Mikrodosere</h3>
+            <h2 class="section-heading">Årsaker til å mikrodosere</h2>
             <div class="mb-4 text-left">
               <p>Du har kanskje hørt om mikrodosering fra teknologi- og gründermiljøet i Silicon Valley, som hevder at mikrodosering
                 av LSD har gitt dem økt kreativitet og inspirasjon til å skape og utvikle nye tjenester.<sup>[1]</sup>
@@ -163,9 +163,9 @@
     <section id="how" class="bg-white">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center mt-4">
-            <h2 class="section-heading text-uppercase">Hvordan Mikrodosere</h2>
-            <h3 class="section-subheading">Guide til mikrodosering</h3>
+          <div class="col-lg-12 mt-4">
+          <h3 class="section-subheading">Hvordan Mikrodosere</h3>
+            <h2 class="section-heading">Guide til mikrodosering</h2>
             <div class="mb-4 text-left">
               <p class="mb-4">
                 Mikrodosering vil si å ta små doser. En mikrodose er 10% eller mindre av en vanlig brukerdose. Det vil si omtrent
@@ -205,9 +205,9 @@
     <section id="quotes" class="lightbg">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center mt-4">
-            <h2 class="section-heading text-uppercase">Sitater</h2>
-            <h3 class="section-subheading">Hva sier andre om mikrodosering?</h3>
+          <div class="col-lg-12 mt-4">
+          <h3 class="section-subheading">Sitater</h3>
+            <h2 class="section-heading">Hva sier andre om mikrodosering?</h2>
           </div>
         </div>
         <div class="row">
@@ -279,9 +279,9 @@
     <section id="science" class="bg-white">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center mt-4">
-            <h2 class="section-heading text-uppercase">Forskning</h2>
-            <h3 class="section-subheading">Hva sier forskningen om mikrodosering?</h3>
+          <div class="col-lg-12 mt-4">
+          <h3 class="section-subheading">Forskning</h3>
+            <h2 class="section-heading">Hva sier forskningen om mikrodosering?</h2>
             <div class="text-left">
               <p>Det ikke gjort noen større studier på effektene av mikrodosering ennå, men Dr. James Fadiman har samlet over
                 tusen erfaringsrapporter.<sup>[1]</sup>
@@ -362,10 +362,10 @@
     <section id="benefits" class="lightbg">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center mt-4">
-            <h2 class="section-heading text-uppercase">Nytteeffekter</h2>
-            <h3 class="section-subheading">Potensielle nytteeffekter ved mikrodosering</h3>
-            <div class="my-4 text-left mb-5">
+          <div class="col-lg-12 text-left mt-4">
+            <h3 class="section-subheading">Nytteeffekter</h3>
+            <h2 class="section-heading">Potensielle nytteeffekter ved mikrodosering</h2>
+            <div class="my-4 mb-5">
               <h5 class="my-3">Forbedret funksjonsevne</h5>
               <p>Mange mikrodoserer fordi de mener det gjør at de fungerer bedre, både på jobb, trening og sosialt. Det kan være
                 lettere å komme inn i såkalte "flow states" med uavbrutt konsentrasjon.</p>
@@ -500,44 +500,43 @@
     <section id="risk" class="bg-white">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center mt-4">
-            <h2 class="section-heading text-uppercase">Risiko</h2>
-            <h3 class="section-subheading">Risiko ved mikrodosering</h3>
-            <div class="text-left">
-              <div class="text-center text-primary">
-                <div class="primarybg rounded px-5 mt-5 pt-4 pb-4 mb-4">
+          <div class="col-lg-12 mt-4">
+            <h3 class="section-subheading">Risiko</h3>
+            <h2 class="section-heading">Risiko ved mikrodosering</h2>
+            <div class="primarybg rounded px-4 py-3 mb-4">
+              <div class="row">
+                <div class="col col-lg-1 text-left">
                   <i class="fa fa-exclamation-triangle fa-2x mt-2 mb-2"></i>
-                  <p>Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller
+                </div>
+                <div class="col">
+                  Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller
                   fengselsstraff.
-                  </p>
                 </div>
               </div>
-              <p class="mb-4">
-                Psykedelika har i flere ekspertvurderinger blitt rangert å ha lavere risiko enn andre rusmidler. Psykedelika
-                er kroppslig veltolerert, og er ikke avhengighetsdannende. Det er imidlertid liten forskning på konsekvensene
-                av regelmessig bruk av psykedelika over veldig lang tid, og derfor bør du ikke mikrodosere over mer enn et
-                par måneder av gangen.
-              </p>
-              <p class="mb-4">
-                I større doser kan psykedelika lede til følelsesmessig krevende og skremmende opplevelser. Dette er en usannsynlig
-                risiko ved mikrodosering, men det er mulig å merke en forsterkning av negative følelser.
-                Vurder din egen mentale tilstand før du velger å mikrodosere. Dersom du lider av alvorlige mentale lidelser,
-                som schizofreni, bør du diskutere med fastlegen før du velger å mikrodosere.
-              </p>
-              <p class="mb-4">
-                Siden produksjon og distribusjon av LSD ikke er regulert eller kvalitetskontrollert av helsemyndighetene, bør
-                du bruke testutstyr for å være sikker på om det faktisk er LSD du har. Skadelige rusmidler, som NBOME, kan
-                bli solgt som LSD. Disse har en helt annen risikoprofil enn LSD, og dødsfall har forekommet etter bruk av disse
-                produktene. Vi anbefaler derfor alle som har bestemt seg for å bruke psykedelika å bruke testutstyr.
-              </p>
-              <p class="mb-4">
-                Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff.
-                Dette kan innebære husransakelse, involvering av barnevernet og inndrag av førerkort.
-              </p>
             </div>
+            <p class="mb-4">
+              Psykedelika har i flere ekspertvurderinger blitt rangert å ha lavere risiko enn andre rusmidler. Psykedelika
+              er kroppslig veltolerert, og er ikke avhengighetsdannende. Det er imidlertid liten forskning på konsekvensene
+              av regelmessig bruk av psykedelika over veldig lang tid, og derfor bør du ikke mikrodosere over mer enn et
+              par måneder av gangen.
+            </p>
+            <p class="mb-4">
+              I større doser kan psykedelika lede til følelsesmessig krevende og skremmende opplevelser. Dette er en usannsynlig
+              risiko ved mikrodosering, men det er mulig å merke en forsterkning av negative følelser.
+              Vurder din egen mentale tilstand før du velger å mikrodosere. Dersom du lider av alvorlige mentale lidelser,
+              som schizofreni, bør du diskutere med fastlegen før du velger å mikrodosere.
+            </p>
+            <p class="mb-4">
+              Siden produksjon og distribusjon av LSD ikke er regulert eller kvalitetskontrollert av helsemyndighetene, bør
+              du bruke testutstyr for å være sikker på om det faktisk er LSD du har. Skadelige rusmidler, som NBOME, kan
+              bli solgt som LSD. Disse har en helt annen risikoprofil enn LSD, og dødsfall har forekommet etter bruk av disse
+              produktene. Vi anbefaler derfor alle som har bestemt seg for å bruke psykedelika å bruke testutstyr.
+            </p>
+            <p class="mb-4">
+              Bruk og besittelse av LSD og psilocybin er ulovlig i Norge, og kan få konsekvenser som bøtelegging eller fengselsstraff.
+              Dette kan innebære husransakelse, involvering av barnevernet og inndrag av førerkort.
+            </p>
           </div>
-        </div>
-
         </div>
       </div>
     </section>
@@ -546,9 +545,9 @@
     <section class="lightbg" id="more">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 text-center mt-4">
-            <h2 class="section-heading text-uppercase">Mer informasjon</h2>
-            <h3 class="section-subheading">Mer informasjon om mikrodosering kan finnes på disse nettsidene:</h3>
+          <div class="col-lg-12 mt-4">
+            <h3 class="section-subheading">Mer informasjon</h3>
+              <h2 class="section-heading">Mer informasjon om mikrodosering kan finnes her:</h2>
           </div>
         </div>
         <div class="row">
@@ -560,11 +559,11 @@
                 </div>
               </div>
               <img class="img-fluid" src="img/thumbnails/1.png" alt="">
+              <div class="grid-caption">
+                <h4>Microdosing</h4>
+                <p class="text-muted">thethirdwave.co</p>
+              </div>
             </a>
-            <div class="grid-caption">
-              <h4>Microdosing</h4>
-              <p class="text-muted">thethirdwave.co</p>
-            </div>
           </div>
           <div class="col-md-4 col-sm-6 grid-item">
             <a class="grid-link" target="_blank" href="https://sites.google.com/view/microdosingpsychedelics/">
@@ -574,11 +573,11 @@
                 </div>
               </div>
               <img class="img-fluid" src="img/thumbnails/2.png" alt="">
+              <div class="grid-caption">
+                <h4>Microdosing Psychedelics</h4>
+                <p class="text-muted">sites.google.com</p>
+              </div>
             </a>
-            <div class="grid-caption">
-              <h4>Microdosing Psychedelics</h4>
-              <p class="text-muted">sites.google.com</p>
-            </div>
           </div>
           <div class="col-md-4 col-sm-6 grid-item">
             <a class="grid-link" target="_blank" href="https://thethirdwave.co/microdosing-lsd-mushrooms/">
@@ -588,11 +587,11 @@
                 </div>
               </div>
               <img class="img-fluid" src="img/thumbnails/3.png" alt="">
+              <div class="grid-caption">
+                <h4>The Ultimate Guide to Microdosing</h4>
+                <p class="text-muted">thethirdwave.co</p>
+              </div>
             </a>
-            <div class="grid-caption">
-              <h4>The Ultimate Guide to Microdosing</h4>
-              <p class="text-muted">thethirdwave.co</p>
-            </div>
           </div>
           <div class="col-md-4 col-sm-6 grid-item">
             <a class="grid-link" target="_blank" href="https://www.youtube.com/watch?v=n8_ZI1GGEXE">
@@ -602,11 +601,11 @@
                 </div>
               </div>
               <img class="img-fluid" src="img/thumbnails/4.png" alt="">
+              <div class="grid-caption">
+                <h4>Paul Austin: Microdosing Psychedelics</h4>
+                <p class="text-muted">youtube.com</p>
+              </div>
             </a>
-            <div class="grid-caption">
-              <h4>Paul Austin: Microdosing Psychedelics</h4>
-              <p class="text-muted">youtube.com</p>
-            </div>
           </div>
         </div>
       </div>
@@ -625,17 +624,17 @@
           </div>
           <div class="container pt-4">
             <div class="row justify-content-center mb-4">
-              <div class="col-xs-1 text-center mx-3">
+              <div class="col-xs-1 mx-3">
                 <a target="_blank" href="https://www.facebook.com/psynapse.no/">
                   <i class="fab fa-facebook fa-2x"></i>
                 </a>
               </div>
-              <div class="col-xs-1 text-center mx-3">
+              <div class="col-xs-1 mx-3">
                 <a target="_blank" href="https://twitter.com/psynapsenorge/">
                   <i class="fab fa-twitter fa-2x"></i>
                 </a>
               </div>
-              <div class="col-xs-1 text-center mx-3">
+              <div class="col-xs-1 mx-3">
                 <a target="_blank" href="https://www.instagram.com/psynapsenorway/">
                   <i class="fab fa-instagram-square fa-2x"></i>
                 </a>
