Changed colors of quotation cards and size of website cards

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 col-sm-6 grid-item">
+          <div class="col col-sm-6 grid-item">
             <a class="grid-link" target="_blank" href="https://thethirdwave.co/microdosing/">
               <div class="grid-hover">
                 <div class="grid-hover-content">
@@ -560,12 +560,12 @@
               </div>
               <img class="img-fluid" src="img/thumbnails/1.png" alt="">
               <div class="grid-caption">
-                <h4>Microdosing</h4>
-                <p class="text-muted">thethirdwave.co</p>
+                <h4>Microdosing Psychedelics</h4>
+                <p class="mutedText">thethirdwave.co</p>
               </div>
             </a>
           </div>
-          <div class="col-md-4 col-sm-6 grid-item">
+          <div class="col col-sm-6 grid-item">
             <a class="grid-link" target="_blank" href="https://sites.google.com/view/microdosingpsychedelics/">
               <div class="grid-hover">
                 <div class="grid-hover-content">
@@ -575,11 +575,11 @@
               <img class="img-fluid" src="img/thumbnails/2.png" alt="">
               <div class="grid-caption">
                 <h4>Microdosing Psychedelics</h4>
-                <p class="text-muted">sites.google.com</p>
+                <p class="mutedText">sites.google.com</p>
               </div>
             </a>
           </div>
-          <div class="col-md-4 col-sm-6 grid-item">
+          <div class="col col-sm-6 grid-item">
             <a class="grid-link" target="_blank" href="https://thethirdwave.co/microdosing-lsd-mushrooms/">
               <div class="grid-hover">
                 <div class="grid-hover-content">
@@ -589,11 +589,11 @@
               <img class="img-fluid" src="img/thumbnails/3.png" alt="">
               <div class="grid-caption">
                 <h4>The Ultimate Guide to Microdosing</h4>
-                <p class="text-muted">thethirdwave.co</p>
+                <p class="mutedText">thethirdwave.co</p>
               </div>
             </a>
           </div>
-          <div class="col-md-4 col-sm-6 grid-item">
+          <div class="col col-sm-6 grid-item">
             <a class="grid-link" target="_blank" href="https://www.youtube.com/watch?v=n8_ZI1GGEXE">
               <div class="grid-hover">
                 <div class="grid-hover-content">
@@ -603,7 +603,7 @@
               <img class="img-fluid" src="img/thumbnails/4.png" alt="">
               <div class="grid-caption">
                 <h4>Paul Austin: Microdosing Psychedelics</h4>
-                <p class="text-muted">youtube.com</p>
+                <p class="mutedText">youtube.com</p>
               </div>
             </a>
           </div>
