Fixed margin on warning

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <h2 class="section-heading">Risiko ved mikrodosering</h2>
             <div class="primarybg rounded px-4 py-3 mb-4">
               <div class="row">
-                <div class="warningLeft col col-1 mr-4 text-left">
+                <div class="warningLeft col col-1 text-left">
                   <i class="fa fa-exclamation-triangle fa-2x mt-2 mb-2"></i>
                 </div>
                 <div class="col">
