--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta property="og:type" content="website">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/all.css" rel="stylesheet" type="text/css">
+    <link href="vendor/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
@@ -622,13 +622,13 @@
               bruk av psykedelika og MDMA, både i rekreasjonelle, seremonielle eller terapeutiske former.
             </p>
           </div>
-          <div class="container pt-4">
+          <!--div class="container pt-4">
             <div class="row justify-content-center mb-4">
               <div class="col-xs-1 mx-3">
                 <a target="_blank" href="https://www.facebook.com/psynapse.no/">
                   <i class="fab fa-facebook fa-2x"></i>
                 </a>
-              </div>
+              </div-->
               <div class="col-xs-1 mx-3">
                 <a target="_blank" href="https://twitter.com/psynapsenorge/">
                   <i class="fab fa-twitter fa-2x"></i>
