--- a/index.html
+++ b/index.html
@@ -622,9 +622,9 @@
               bruk av psykedelika og MDMA, både i rekreasjonelle, seremonielle eller terapeutiske former.
             </p>
           </div>
-          <!--div class="container pt-4">
+          <div class="container pt-4">
             <div class="row justify-content-center mb-4">
-              <div class="col-xs-1 mx-3">
+              <!--div class="col-xs-1 mx-3">
                 <a target="_blank" href="https://www.facebook.com/psynapse.no/">
                   <i class="fab fa-facebook fa-2x"></i>
                 </a>
