--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <!-- Google Tag Manager -->
+    <!-- Google Tag Manager 
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({
           'gtm.start':
@@ -28,7 +28,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="ite.webmanifest">
+    <!--link rel="manifest" href="ite.webmanifest"-->
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -624,11 +624,11 @@
           </div>
           <div class="container pt-4">
             <div class="row justify-content-center mb-4">
-              <!--div class="col-xs-1 mx-3">
+              <div class="col-xs-1 mx-3">
                 <a target="_blank" href="https://www.facebook.com/psynapse.no/">
                   <i class="fab fa-facebook fa-2x"></i>
                 </a>
-              </div-->
+              </div>
               <div class="col-xs-1 mx-3">
                 <a target="_blank" href="https://twitter.com/psynapsenorge/">
                   <i class="fab fa-twitter fa-2x"></i>
