--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <!-- Google Tag Manager 
+    <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({
           'gtm.start':
@@ -21,28 +21,24 @@
 
     <title>Mikrodosering.no</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <!--link rel="manifest" href="ite.webmanifest"-->
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5f5aff">
     <link rel="shortcut icon" href="favicon.ico">
-    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileColor" content="#5f5aff">
     <meta name="msapplication-config" content="browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#5f5aff">
     <meta property="og:image" content="http://mikrodosering.no/img/header.jpg" />
     <meta property="og:title" content="Mikrodosering.no - Veileder til mikrodosering med psykedelika" />
     <meta property="og:url" content="http://mikrodosering.no/">
     <meta property="og:type" content="website">
 
-    <!-- Custom fonts for this template -->
+    <!-- CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/font-awesome/css/all.min.css" rel="stylesheet" type="text/css">
-
-    <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
 
   </head>
@@ -558,7 +554,7 @@
                   <i class="fa fa-external-link-alt fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/thumbnails/1.png" alt="">
+              <img class="img-fluid" src="img/thumbnails/thumb1.jpg" alt="">
               <div class="grid-caption">
                 <h4>Microdosing Psychedelics</h4>
                 <p class="mutedText">thethirdwave.co</p>
@@ -572,7 +568,7 @@
                   <i class="fa fa-external-link-alt fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/thumbnails/2.png" alt="">
+              <img class="img-fluid" src="img/thumbnails/thumb2.jpg" alt="">
               <div class="grid-caption">
                 <h4>Microdosing Psychedelics</h4>
                 <p class="mutedText">sites.google.com</p>
@@ -586,7 +582,7 @@
                   <i class="fa fa-external-link-alt fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/thumbnails/3.png" alt="">
+              <img class="img-fluid" src="img/thumbnails/thumb3.jpg" alt="">
               <div class="grid-caption">
                 <h4>The Ultimate Guide to Microdosing</h4>
                 <p class="mutedText">thethirdwave.co</p>
@@ -600,7 +596,7 @@
                   <i class="fa fa-external-link-alt fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/thumbnails/4.png" alt="">
+              <img class="img-fluid" src="img/thumbnails/thumb4.jpg" alt="">
               <div class="grid-caption">
                 <h4>Paul Austin: Microdosing Psychedelics</h4>
                 <p class="mutedText">youtube.com</p>
